# crypto-price

./: Cargo.toml  README.md  prod.env  prod.sample.env  sandbox.env
src/: main.rs
src/lib/: cryptos.rs  fiats.rs  https_client.rs  latest_price.rs  mod.rs
